--- a/package.json
+++ b/package.json
@@ -3,22 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.13",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "lodash": "^4.17.20",
+    "mauerwerk": "^2.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-lazyload": "^3.1.0",
     "react-scripts": "^4.0.1",
     "react-scroll": "^1.8.1",
     "react-scroll-parallax": "^2.3.5",
-    "web-vitals": "^0.2.4"
+    "react-spring": "^8.0.27"
   },
   "scripts": {
     "start": "react-scripts start",
