--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "compression": "^1.7.4",
+    "emailjs-com": "^2.6.4",
     "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
