--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-lazyload": "^3.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-scroll": "^1.8.1",
     "react-scroll-parallax": "^2.3.5",
